--- a/index.html
+++ b/index.html
@@ -3,38 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix Clone</title>
     <link rel="stylesheet" href="style.css">
-    <title>Netfix Clone</title>
+
     <style>
-        .sticker_box1 img{
-            margin-left: 120px;
-            margin-top: 4px;
+        .sticker_box img{
+            position: absolute;
+            bottom: 15px;
+            right: 15px;
+            width: 70px;
+            height: auto;
         }
-        .sticker_box2 img{
-            margin-left: 135px;
-            margin-top: 7px;
-            width: 85px;
-            height: 85px;
-        }
-        .sticker_box3 img{
-            margin-left: 145px;
-            margin-top: 44px;
-        }
-        .sticker_box4 img{
-            margin-left: 120px;
-            
-        }
+
         .parent_last_button{
             display: flex;
             justify-content: center;
-
         }
+
         .last_button{
-            font-size: 20px;
+            font-size: 18px;
             width: 170px;
             height:55px;
-            margin-top: 70px;
-            margin-bottom: 40px;
+            margin: 70px 0 40px;
             border-radius: 5px;
             background-color: red;
             color: white;
@@ -43,64 +33,77 @@
         }
     </style>
 </head>
+
 <body>
-    <div class="hero">
-        <div class="Top_bar">
-            <img src="logu.png.png" alt="Netflix logu" class="logu">
-            <button class="Sign_IN">Sign Out</button>
+
+<div class="hero">
+    <div class="Top_bar">
+        <img src="logu.png.png" alt="Netflix logo" class="logu">
+        <button class="Sign_IN">Sign Out</button>
+    </div>
+
+    <div class="text">Unlimited movies, TV shows, and more</div>
+    <div class="smalltext">Starts at Rs 250. Cancel anytime.</div>
+
+    <div class="button_parent">
+        <button class="finishup">Finish Signup ></button>
+    </div>
+</div>
+
+<div class="trending_section">
+    <svg width="100%" height="40px" viewBox="0 -20 100 40" preserveAspectRatio="none">
+        <path d="M 0 10 Q 50 -40 100 10" fill="none" stroke="#e50914" stroke-width="2"/>
+    </svg>
+
+    <h2>Trending Now</h2>
+
+    <div class="horizontally_center">
+        <div class="Film_Images">
+            <img src="christian-crocker-3aEXKuxZBxQ-unsplash.jpg">
+            <img src="danny-greenberg-gkb1pVSbatQ-unsplash.jpg">
+            <img src="david-schultz-L3aZYJp8Cqc-unsplash.jpg">
+            <img src="dwayne-joe-K9kJJwk02kg-unsplash.jpg">
+            <img src="jorgen-hendriksen-2BNC1_H7Jc8-unsplash.jpg">
+            <img src="kian-zhang-Cf6cZa8EJgE-unsplash.jpg">
+            <img src="michael-fousert-N6yQ7kkkoJI-unsplash.jpg">
+            <img src="mos-design-_vJFrYtwzQE-unsplash.jpg">
+            <img src="polina-kuzovkova-s8d8QVOcdSE-unsplash.jpg">
+            <img src="zhenyu-luo-ULwn05blX1w-unsplash.jpg">
         </div>
-        <div class="text">Unlimited movies, TV shows, and more</div><br>
-        <br><div class="smalltext">Starts at Rs 250. Cancel anytime.</div><br>
-        <br><div class="button_parent">
-            <button class="finishup">Finish Signup > </button>
+    </div>
+
+    <div class="more_text">More Reasons to Join</div>
+
+    <div class="stickers">
+        <div class="sticker_box">
+            <h3>Enjoy on your TV</h3>
+            <h4>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</h4>
+            <img src="icons8-computer-94.png">
+        </div>
+
+        <div class="sticker_box">
+            <h3>Download your shows</h3>
+            <h4>Save your favorites easily and always have something to watch.</h4>
+            <img src="icons8-download-64.png">
+        </div>
+
+        <div class="sticker_box">
+            <h3>Watch everywhere</h3>
+            <h4>Stream unlimited movies and TV shows on all devices.</h4>
+            <img src="icons8-telescope-64.png">
+        </div>
+
+        <div class="sticker_box">
+            <h3>Create profiles for kids</h3>
+            <h4>Send kids on adventures with their favorite characters.</h4>
+            <img src="icons8-account-100.png">
         </div>
     </div>
-    <div class="trending_section">
-   <svg  width="100%" height="40px" viewBox="0 -20 100 40" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
-  <path d="M 0 10 Q 50 -40 100 10" fill="none" stroke="#e50914" stroke-width="2" />
-   </svg>
-   <h2>Trending Now</h2>
-   <div class="horizontally_center">
-   <div class="Film_Images">
-    <img style="margin-left: 15px;" src="christian-crocker-3aEXKuxZBxQ-unsplash.jpg" alt="Movie">
-    <img src="danny-greenberg-gkb1pVSbatQ-unsplash.jpg" alt="movie">
-    <img src="david-schultz-L3aZYJp8Cqc-unsplash.jpg" alt="movie">
-    <img src="dwayne-joe-K9kJJwk02kg-unsplash.jpg" alt="movie">
-    <img src="jorgen-hendriksen-2BNC1_H7Jc8-unsplash.jpg" alt="movie">
-    <img src="kian-zhang-Cf6cZa8EJgE-unsplash.jpg" alt="movie">
-    <img src="michael-fousert-N6yQ7kkkoJI-unsplash.jpg" alt="movie">
-    <img src="mos-design-_vJFrYtwzQE-unsplash.jpg" alt="movie">
-    <img src="polina-kuzovkova-s8d8QVOcdSE-unsplash.jpg" alt="movie">
-    <img src="zhenyu-luo-ULwn05blX1w-unsplash.jpg" alt="movie">
-   </div>
-   </div>
-   <div class="more_text">More Reasons to Join</div>
-   <br>
-   <div class="stickers">
-    <div class="sticker_box sticker_box1">
-        <h3 style="color: white; margin-top: 20px; margin-left: 10px; font-family: Arial, Helvetica, sans-serif;">Enjoy on your TV</h3>
-        <h4 style="color: rgba(255, 255, 255, 0.792); margin-top: 20px; margin-left: 10px; font-family:  Arial, Helvetica, sans-serif; font-weight: lighter;">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</h4>
-         <img src="icons8-computer-94.png" alt="Computer icon">
-    </div>
-    <div class="sticker_box  sticker_box2 ">
-        <h3 style="color: white; font-family: Arial, Helvetica, sans-serif; margin-left: 10px;">Download your shows to watch offline</h3>
-        <h4 style="color: rgba(255, 255, 255, 0.792); font-family: Arial, Helvetica, sans-serif; font-weight: lighter; margin-left: 10px;">Save your favorites easily and always have something to watch.</h4>
-        <img src="icons8-download-64.png" alt="Download">
-    </div>
-    <div class="sticker_box  sticker_box3">
-        <h3 style="color: white; font-family: Arial, Helvetica, sans-serif; margin-left: 10px;">Watch everywhere</h3>
-        <h4 style="color: rgba(255, 255, 255, 0.792); font-family: 'Times New Roman', Times, serif; font-weight: lighter; margin-left: 10px;">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h4>
-        <img src="icons8-telescope-64.png" alt="Telescope">
-    </div>
-    <div class="sticker_box  sticker_box4">
-        <h3 style="color: white; font-family: Arial, Helvetica, sans-serif; margin-left: 10px;">Create profiles for kids</h3>
-        <h4 style="color: rgba(255, 255, 255, 0.792); font-family: Arial, Helvetica, sans-serif; font-weight: lighter; margin-left: 10px;">Send kids on adventures with their favorite characters in a space made just for them — free with your membership.</h4>
-        <img src="icons8-account-100.png" alt="Account">
-    </div>
-   </div>
-    </div>
-    <div class="parent_last_button">
-        <button class="last_button"> Finish Sign-Up > </button>
-    </div>
+</div>
+
+<div class="parent_last_button">
+    <button class="last_button">Finish Sign-Up ></button>
+</div>
+
 </body>
-</html> 
+</html>
