Add footer copyright with developer name

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     </div>
 </div>
 
-<div class="parent_last_button">
-    <button class="last_button">Finish Sign-Up ></button>
-</div>
+<footer class="footer">
+    <p>© 2026 Muhammad Aqeel. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
